--- a/index.html
+++ b/index.html
@@ -16,8 +16,25 @@
         <a href="#">Experience</a>
         <a href="#">Projects</a>
         <a href="#">Education</a>
-    </header>
     </nav>
-    <a href="#" class="contact">Contact Me</a>
+    <a href="#"class="contact">Contact Me</a>
+</header>
+<section class="home">
+    <div class="home-content">
+        <h3>Hi</h3>
+        <h1>i am <span>Sudip</span> a Frontend developer</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ad explicabo alias. Debitis, quisquam repudiandae molestiae sequi soluta ullam pariatur doloribus maiores rerum perferendis nisi blanditiis aut omnis eos distinctio!</p>
+        <div class="btn-box">
+            <button class="btn-1">Hire Me</button>
+            <button class="btn-2">Experience</button>
+
+        </div>
+
+    </div>
+ <div class="img-box">
+    <img src="hardy.png" alt="">
+ </div>
+
+</section>
 </body>
 </html>
